изменили сложение на умножение)

--- a/2/2.html
+++ b/2/2.html
@@ -4,5 +4,5 @@ var a = prompt("Первое число:");
 var b = prompt("Второе число:"); 
 a = parseInt(a); 
 b = parseInt(b); 
-alert(a+b); 
+alert(a*b); 
 </script>
